# Computer_Vision

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  faceDetect.h  filter.cpp  filter.h  filters.cpp  filters.h  imgDisplay.cpp  timeBlur.cpp  vidDisplay.cpp
Module_1/: HW1.docx  News.docx
Module_2/: HW_2.docx
Module_3/: hw3.docx
Module_4/: Law's Texture.py  difference_of_gaussian.py  guassian.py  hw4.docx  sobel_filter.py
Project_1/: report.docx  ~$report.docx  ~WRL1408.tmp
Project_2/: CMakeLists.txt  README.md  distance_metric.cpp  features.cpp  main.cpp
Project_2/Report_output/: ~$report.docx
Project_2/include/: distance_metric.h  features.h
Project_3/: CMakeLists.txt  README.md  main.cpp  object_features.csv  ~$oject3_report_1.docx
Project_3/Common/: classifying_image.cpp  morphological.cpp  region_feature.cpp  segmentation.cpp  thresholding.cpp
Project_3/Common_Header/: classifying_image.h  morphological.h  segmentation.h  thresholding.h
Project_4/: CMakeLists.txt  Readme.md  camera_pos.cpp  harris_corner.cpp  main.cpp
Project_4/Utils/: image_detection.cpp  utils.cpp
Project_4/Utils_header/: image_detection.h  utils.h
Project_5/: buildingNetworks.py  compareModelOutput.py  constants.py  gettingData.py  main.py  model.pth  optimizer.pth  task2.py  task3.py
